# pyspark-testframework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tutorial.ipynb
.github/: labeler.yml  release.yml
.github/workflows/: cicd.yml  cicd_woonstad_rotterdam.yml  publish-to-pypi.yml
src/testframework/: base.py  tests.py
src/testframework/dataquality/: __init__.py
src/testframework/dataquality/dataframe/: __init__.py  dataframe.py  dataframe_tester.py
src/testframework/dataquality/tests/: __init__.py  correct_value.py  integer_string.py  not_null.py  regex_tst.py  valid_category.py  valid_date_range.py  valid_email_address.py  valid_numeric_range.py  valid_numeric_string_range.py  valid_string_length.py
src/testframework/tests/: __init__.py  category.py  correct_value.py  range.py  regex.py  regex_tst.py  valid_category.py  valid_numeric_range.py  value.py
src/testframework/utils/: decorators.py
tests/: conftest.py
tests/dataquality/: test_DataFrameTester.py
tests/dataquality/dataframe/: test_DataFrameTester.py
tests/dataquality/dataframe/tests/: test_CorrectValue.py  test_IntegerString.py  test_NotNull.py  test_RegexTest.py  test_ValidCategory.py  test_ValidDateRange.py  test_ValidEmailAddress.py  test_ValidNumericRange.py  test_ValidNumericStringRange.py  test_ValidStringLength.py
tests/dataquality/tests/: test_CorrectValue.py  test_RegexTest.py  test_ValidNumericRange.py  test_ValidNumericStringRange.py  test_valid_email_address.py
tests/tests/: test_CorrectValue.py  test_IntegerString.py  test_RegexTest.py  test_regex_test.py
tests/tests/category/: test_ValidCategory.py
tests/tests/range/: test_ValidIntegerRange.py  test_ValidNumericRange.py
tests/tests/regex/: test_IsInteger.py  test_IsIntegerString.py  test_RegexTest.py
tests/utils/decorators/: test_account_for_nullable.py  test_allowed_col_types.py
