[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-testframework"
authors = [
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"},
    {name = "Vincent van der Meij", email = "vincent.van.der.meij@woonstadrotterdam.nl"},
    {name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9.5"
license = {file = "LICENSE"}
dependencies = [
    "pyspark>=3.3.4"
]
version = "0.0.0"

[project.optional-dependencies]
test = [
    "pyspark==3.3.4",
    "pre-commit==3.7.1",
    "pytest==8.2.2",
    "cloudpickle<2.2.0"
]

dev = [
    "pyspark-testframework[test]",
    "ruff==0.4.8"
]



[tool.setuptools]
packages = ["testframework"]
package-dir = {"" = "src"}
